--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
+  },
+  "scripts": {
+    "test": "jest --watchAll"
   }
 }
